# vut-fit

./: .gitignore  README.md  start.sh
ial-project-1/: README.md
ial-project-1/c202/: Makefile  c202.c
ial-project-1/c204/: Makefile  c204.c
ial-project-1/c206/: Makefile  c206.c
ial-project-1/scripts/: cp_run_tests_all.sh
ial-project-2/: README.md
ial-project-2/btree/: Makefile  btree.c  btree.h  test.c  test_util.c  test_util.h
ial-project-2/btree/iter/: Makefile  btree.c  stack.c  stack.h
ial-project-2/btree/rec/: Makefile  btree.c
ial-project-2/hashtable/: Makefile  hashtable.c  hashtable.h  test_util.c  test_util.h
ial-project-2/scripts/: go.sh  run.sh
iam-project-1-sat-solver/: Makefile  README.md  queens.py
iam-project-2-smt-solver/: README.md  xlapes02.smt
icp-project/: CMakeLists.txt  README.md  README.txt  icp-vut-fit.pro
icp-project/examples/: bookstore.json
icp-project/src/core/open-file/: open_file.cpp
icp-project/src/core/save-file/: save_file.cpp  save_file.h
icp-project/src/core/verification/: verification.h
icp-project/src/gui/: window.cpp
icp-project/src/gui/canvas/class-diagram/entity/: entity.h
icp-project/src/gui/canvas/class-diagram/entity/class_info/: class_info.h
icp-project/src/gui/canvas/class-diagram/entity/entity-text/: entity_text.cpp
icp-project/src/gui/canvas/class-diagram/relation/: relation_line.cpp  relation_line.h
icp-project/src/gui/canvas/class-diagram/relation/relation-point/: relation_point.cpp  relation_point.h
icp-project/src/gui/canvas/class-diagram/relation/relation-text/: relation_text.cpp
icp-project/src/gui/canvas/class-diagram/text-item/: text_item.cpp  text_item.h
icp-project/src/gui/canvas/class-diagram/undo-redo/: undo_redo.cpp  undo_redo.h
icp-project/src/gui/canvas/sequence-diagram/: sequence_diagram.h
icp-project/src/gui/canvas/sequence-diagram/actor/: actor.cpp
icp-project/src/gui/canvas/sequence-diagram/box/: box.h
icp-project/src/gui/canvas/sequence-diagram/lifeline/: lifeline.cpp  lifeline.h
icp-project/src/gui/canvas/sequence-diagram/message/: message.h
icp-project/src/gui/canvas/sequence-diagram/message/point/: point.h
icp-project/src/gui/canvas/sequence-diagram/object/: object.cpp  object.h
icp-project/src/gui/menu/: menu.cpp
icp-project/src/gui/side-toolbox/resizer/: resizer.h
icp-vut-fit/: .editorconfig  Makefile  README.md  start.sh
icp-vut-fit/doc/: Doxyfile
icp-vut-fit/examples/: atm.json
icp-vut-fit/src/: main.cpp
icp-vut-fit/src/core/open-file/: open_file.h
icp-vut-fit/src/core/verification/: verification.cpp
icp-vut-fit/src/gui/: window.h
icp-vut-fit/src/gui/canvas/: canvas.cpp  canvas.h
icp-vut-fit/src/gui/menu/: menu.h
icp-vut-fit/src/gui/side-toolbox/: side_toolbox.cpp  side_toolbox.h
ids-project/: README.md
ids-project/1-task/: README.md  er_diagram.drawio  use_case.drawio  xlapes02_xbinov00.docx  zadani.docx
ids-project/2-task/: xlapes02_xbinov00.sql
ids-project/3-task/: xlapes02_xbinov00.sql
ids-project/4-task/: xlapes02_xbinov00.docx  xlapes02_xbinov00.sql
ifj-project/materials/codes/ifj21_examples/: m1.tl  m2.in  m2.tl  m3.tl  m_2.tl
ifj-project/materials/codes/ifjcode21_examples/: built-in_1.ifjcode  built-in_1_stack.ifjcode  built-in_2.ifjcode  built-in_3.ifjcode  built-in_readi.ifjcode  built-in_tointeger.ifjcode  example_demo.ifjcode  example_gen.txt  example_type.ifjcode  m_1.ifjcode  m_2.ifjcode  t1.ifjcode
ifj-project/materials/codes/ifjcode21_examples_2/: README  example_demo.ifjcode  example_push_pops.ifjcode  example_recursive_fibonacci.ifjcode  example_return.ifjcode  example_type.ifjcode  example_while.ifjcode
ijc-project-1/: Makefile  README.md  bitset.c  bitset.h  eratosthenes.c  eratosthenes.h  error.c  error.h  ppm.c  ppm.h  primes.c  steg-decode.c  steg-encode.c  valgrind_run.sh  zadani.txt
ijc-project-2/: CMakeLists.txt  CMakeLists.txt.in  GoogleTest.cmake  Makefile  README.md  htab.h  htab_bucket_count.c  htab_clear.c  htab_define.h  htab_erase.c  htab_find.c  htab_for_each.c  htab_free.c  htab_hash_function.c  htab_init.c  htab_lookup_add.c  htab_move.c  htab_size.c  io.c  io.h  tail.c  wordcount.c
ijc-project-2/data/: data1.txt  data3.txt  data4.txt
ijc-project-2/gdb/: init_1.gdb  init_2.gdb  init_3.gdb
ijc-project-2/tests/: CMakeLists.txt  CMakeLists.txt.in  htab_test.cpp
ios-project-1/: README.md  tradelog
ios-project-1/awk-files/: graph-pos-new.awk
ios-project-2/: Makefile  README.md  arguments.c  arguments.h  error.c  error.h  helper.c  helper.h  macros.h  processes.c  processes.h  proj2.c  santa_problem.c  santa_problem.h  sem.c  sem.h  shm.c  shm.h  struct_def_enum.h
ios-project-2/tests/: kontrola_vystupu.sh  p2test.py  run.sh
iza-project/: README.md  start.sh
iza-project/iza-project/: ImageIdentifiers.swift  iza_projectApp.swift
iza-project/iza-project.xcodeproj/: project.pbxproj
iza-project/iza-project/Assets.xcassets/home.imageset/: Contents.json
iza-project/iza-project/Models/: Month.swift  StockInWatchlistModel.swift  StockInfoWatchlistCellModel.swift  StockSearchModel.swift  WatchlistModel.swift
iza-project/iza-project/ViewModels/: StockInWatchlistViewModel.swift  WatchlistViewModel.swift
iza-project/iza-project/Views/: AppTabNavigationView.swift  ViewModifiers.swift
(+38 files in other folders)
